--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
     <!-- hnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaat -->
 
   
-  <title> Sanitaer-Heizung-Mueller.de
+  <title> Rohrreinigung-Frick
+
 
   </title>
 
@@ -75,7 +76,8 @@
             <a class="navbar-brand" href="index.html">
               <span>
                 
-       Sanitaer-Heizung-Mueller
+     Rohrreinigung-Frick
+
 
               </span>
             </a>
@@ -112,20 +114,20 @@
             <h2>
               Datenschutzerklärung            </h2>
             <p>
-              Datenschutzerklärung
-Sanitaer-Heizung-Mueller.de
+          Rohrreinigung-Frick
+
 
 
               <br />
 
 
-          Felix Bohlmann
+        Ralf Voelk
     <br />
 
         022876383633   <br />
 
-          Kellerstraße 9
-42107 Wuppertal
+       Albertstraße 88, 40233 Düsseldorf
+
   <br />
               
  
