--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <!-- hnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaat -->
 
   
-  <title> Rohrreinigung-Frick
+  <title> RohrreinigungFrick
 
 
   </title>
@@ -71,7 +71,7 @@
             <a class="navbar-brand" href="index.html">
               <span>
                 
-     Rohrreinigung-Frick
+     Rohrreinigung Frick
 
 
               </span>
@@ -107,9 +107,9 @@
         <div class="col-lg-5 col-md-6">
           <div class="detail-box">
             <h2>
-              Datenschutzerklärung            </h2>
+              Impressum            </h2>
             <p>
-          Rohrreinigung-Frick
+          Rohrreinigung Frick
 
 
 
